27383 CSS fixes for Jupiter Page header on mobile devices

--- a/public_html/resources/scss/infocus.scss
+++ b/public_html/resources/scss/infocus.scss
@@ -445,6 +445,27 @@ header + .hero_row > .row {
     background: url('../static/images/jupiter/jupiter-hero-a.jpg') left top no-repeat;
     background-size:cover;
     background-origin: border-box;
+
+    &.transparent-border-left-125-orange {
+      @media screen and (max-width:62em) {
+        border-left-width: 80px;
+        margin-bottom: 6em;
+      }
+      @media screen and (max-width:40em) {
+        border-left-width: 40px;
+        margin-bottom: 3em;
+      }    
+    }
+
+    .lead_text--headline {
+      @media screen and (max-width:62em) {
+        font-size: 3rem;
+      }
+      @media screen and (max-width:40em) {
+        font-size: 1.8rem;
+        margin-top: 1em !important;
+      }
+    }
   }
   &.hero-row--header_module_c {
     background-size: contain;
